--- a/layouts/shortcodes/contentblocklist.html
+++ b/layouts/shortcodes/contentblocklist.html
@@ -5,7 +5,7 @@
 {{ $subpath = $value }}
 {{ else }}
 <li>
-	{{ with site.GetPage (printf "%s%s%s.md" "contentblocks/" $subpath $value) }}
+	{{ with site.GetPage (printf "%s%s%s.md" "contentblocks" $subpath $value) }}
 	{{ .Content | markdownify | safeHTML }}
 	{{ end }}
 </li>
