--- a/layouts/shortcodes/contentblocklist.html
+++ b/layouts/shortcodes/contentblocklist.html
@@ -1,14 +1,14 @@
 <ol>
-{{ $subpath := "" }}
-{{ range $index, $value := .Params }}
-{{ if eq (int $index) 0 }}
-{{ $subpath = $value }}
-{{ else }}
-<li>
-	{{ with site.GetPage (printf "%s%s%s.md" "contentblocks" $subpath $value) }}
-	{{ .Content | markdownify | safeHTML }}
+	{{ $subpath := "" }}
+	{{ range $index, $value := .Params }}
+	{{ if eq (int $index) 0 }}
+	{{ $subpath = $value }}
+	{{ else }}
+	<li>
+		{{ with site.GetPage (printf "%s%s%s.md" "contentblocks/" $subpath $value) }}
+		{{ .Content | markdownify | safeHTML }}
+		{{ end }}
+	</li>
 	{{ end }}
-</li>
-{{ end }}
-{{ end }}
+	{{ end }}
 </ol>
